<resources>

    <string name="howHead1">Each Alumni</string>
    <string name="howContent1">Each ALumni</string>

    <string name="howHead2">Each ALumni</string>
    <string name="howContent2">Each ALumni</string>

    <string name="howHead3">Each ALumni</string>
    <string name="howContent3">Each ALumni</string>

    <string name="howHead4">Each ALumni</string>
    <string name="howContent4">Each ALumni</string>



    <string name="app_name">SJBIT Alumni</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_browse_alumni">BrowseAlumni</string>


    <string-array name="branch">
        <item>Any</item>
        <item>CSE</item>
        <item>ISE</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>ECE</item>
        <item>EEE</item>
    </string-array>

    <string-array name="add_branch">

        <item>CS</item>
        <item>IS</item>
        <item>MEC</item>
        <item>CIV</item>
        <item>EC</item>
        <item>EE</item>
    </string-array>

    <string-array name="add_year">
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
    </string-array>


    <string-array name="year">
        <item>Any</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
    </string-array>
    <string name="title_activity_add_alumni">addAlumni</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_update_alumni">UpdateAlumni</string>
    <string name="title_activity_webpage_view">webpageView</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_developer">DeveloperActivity</string>

    <string name="details">Sathish. V - B.E\n3rd Year, Dept of CSE\nSJBIT.\nmun.sathish@gmail.com\n7353578127</string>
    <string name="title_activity_how_to_use">HowToUseActivity</string>


</resources>
