<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sathish.sjbitalumni.howtouse.HowToUseActivity">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/filter_layout_background"
   >





    <!-- 1 -->
    <LinearLayout
        android:id="@+id/layout1"
        android:onClick="toggle_contents1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_filter_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"

            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="20dp"
            android:src="@mipmap/tick_above" />

        <TextView
            android:id="@+id/heading1"
            android:text="@string/howHead1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content1"
        android:layout_below="@+id/layout1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <TextView
            android:text="@string/howContent1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
             />
    </LinearLayout>




    <!-- 2 -->
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/content1"
        android:onClick="toggle_contents2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_filter_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img2"

            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="20dp"
            android:src="@mipmap/tick_above" />

        <TextView
            android:id="@+id/heading2"
            android:text="@string/howHead1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content2"
        android:layout_below="@+id/layout2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <TextView
            android:text="@string/howContent2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
    </LinearLayout>




    <!-- 3 -->
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_below="@+id/content2"
        android:onClick="toggle_contents3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_filter_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img3"

            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="20dp"
            android:src="@mipmap/tick_above" />

        <TextView
            android:id="@+id/heading3"
            android:text="@string/howHead3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content3"
        android:layout_below="@+id/layout3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <TextView
            android:text="@string/howContent3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
    </LinearLayout>




    <!-- 4 -->
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_below="@+id/content3"
        android:onClick="toggle_contents4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_filter_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img4"

            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="20dp"
            android:src="@mipmap/tick_above" />

        <TextView
            android:id="@+id/heading4"
            android:text="@string/howHead4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content4"
        android:layout_below="@+id/layout4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <TextView
            android:text="@string/howContent4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
    </LinearLayout>


</RelativeLayout>
    </ScrollView>
</LinearLayout>